feat: Add link to interactive SAP transformation demo in main UI
ENHANCEMENT: Make SAP Integration tab more engaging

Changes:
- Added prominent call-to-action link in SAP Integration view
- Links to sap-transform-interactive.html (already exists)
- Blue gradient box with "Launch Interactive Demo" button
- Opens in new tab for seamless experience

Interactive demo features (already built):
✅ 4 document types (Purchase Order, Bill of Lading, Invoice, L/C)
✅ Animated step-by-step transformation (1 field per second)
✅ Real SAP table data (EKKO, EKPO, LIKP, LIPS, VBRK, VBRP, ZBANKF)
✅ Field-by-field mapping visualization
✅ SAP → KTDDE transformation arrows
✅ Incremental W3C VC output building
✅ Download VC as JSON
✅ Reset and replay functionality

Benefits:
- More engaging than static table
- Educational - shows HOW transformation works
- Interactive - users control the pace
- Visual - highlights which SAP fields map where

This addresses user feedback to make SAP mappings interactive
rather than just listing them in a table.

--- a/demo/index.html
+++ b/demo/index.html
@@ -745,6 +745,15 @@
         </div>
     </div>
     
+    <!-- Interactive Transformation Link -->
+    <div style="margin: 40px 0; padding: 30px; background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%); border-radius: 12px; text-align: center; color: white; box-shadow: 0 8px 24px rgba(59, 130, 246, 0.3);">
+        <h2 style="margin-bottom: 15px; font-size: 2em;">⚡ Try Interactive Transformation</h2>
+        <p style="margin-bottom: 25px; font-size: 1.1em; opacity: 0.95;">Watch SAP data transform into W3C VCs step-by-step with animated field mappings</p>
+        <a href="sap-transform-interactive.html" target="_blank" style="display: inline-block; padding: 15px 40px; background: white; color: #2563eb; text-decoration: none; border-radius: 8px; font-weight: 700; font-size: 1.1em; box-shadow: 0 4px 12px rgba(0,0,0,0.2); transition: transform 0.3s, box-shadow 0.3s;">
+            Launch Interactive Demo →
+        </a>
+    </div>
+    
     <h3>Available SAP Mappings</h3>
     <div style="background: white; border-radius: 8px; padding: 20px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
         <table style="width: 100%; border-collapse: collapse;">
